<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tictactoe"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cell_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/playerX"
        android:textSize="64sp"
        app:layout_constraintEnd_toStartOf="@+id/cell_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cell_2" />

    <Button
        android:id="@+id/cell_2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/playerO"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/cell_3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/playerX"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cell_2"
        app:layout_constraintTop_toTopOf="@+id/cell_2" />

    <Button
        android:id="@+id/cell_4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/playerO"
        android:textSize="64sp"
        app:layout_constraintStart_toStartOf="@+id/cell_1"
        app:layout_constraintTop_toBottomOf="@+id/cell_1" />

    <Button
        android:id="@+id/cell_5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/playerX"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cell_2" />

    <Button
        android:id="@+id/cell_6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/playerO"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="@+id/cell_3"
        app:layout_constraintTop_toBottomOf="@+id/cell_3" />

    <Button
        android:id="@+id/cell_7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/playerX"
        android:textSize="64sp"
        app:layout_constraintStart_toStartOf="@+id/cell_4"
        app:layout_constraintTop_toBottomOf="@+id/cell_4" />

    <Button
        android:id="@+id/cell_8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/playerO"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cell_5" />

    <Button
        android:id="@+id/cell_9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/playerX"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="@+id/cell_6"
        app:layout_constraintTop_toBottomOf="@+id/cell_6" />

    <Button
        android:id="@+id/ttt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cell_8" />
</androidx.constraintlayout.widget.ConstraintLayout>